--- a/app/views/recipes/_form.html.haml
+++ b/app/views/recipes/_form.html.haml
@@ -1,12 +1,7 @@
 = form_for(@recipe) do |recipe_form|
-  - if @recipe.errors.any?
-    #error_explanation
-      %h2
-        = pluralize(@recipe.errors.count, "error")
-        prohibited this recipe from being saved:
-      %ul
-        - @recipe.errors.full_messages.each do |message|
-          %li= message
+
+  = render 'shared/errors', obj: @recipe
+
   .field
     = recipe_form.label :name
     %br/
